<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorAppAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_main">Sensor App</string>
    <string name="banner_desc">The purpose of the App is to work with Android sensors (motion and camera) and enable Camera censors after “n” number of steps.</string>
    <string name="enter_no_of_steps">Number of Steps: </string>
    <string name="edit_no_of_steps">enter no of steps here.</string>
    <string name="button_enable_sensors">Enable Sensors</string>
    <string name="button_close">Close</string>

</resources>