<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="2" >
             
    </GridView>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/banner_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_main"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/banner_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_centerVertical="true">
   

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

         Here instead of wrap_content you can have fill_parent 
        android:layout_centerVertical="true"
 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/enter_no_of_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_no_of_steps"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_no_of_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_no_of_steps"
                    android:textAppearance="?android:attr/textAppearanceSmall" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_enable_sensors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_enable_sensors" />

                <Button
                    android:id="@+id/button_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="closeApp"
                    android:text="@string/button_close" />
            </LinearLayout>
        </LinearLayout>
  <!--   </RelativeLayout>
    </LinearLayout> -->

</LinearLayout>